--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -188,7 +188,7 @@ body::before {
     font-family: 'American Captain', sans-serif;
     font-size: 3rem;
     letter-spacing: 2.7px;
-    text-align: center;
+    text-align: left;
     margin-top: 3.75rem;
     margin-inline-end: 5.625rem;
 }
@@ -237,7 +237,7 @@ body::before {
 /* Upcoming Game Button */
 .upcoming-game span {
     display: block;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     font-weight: normal;
     margin-top: 5px;
     margin-left: auto;
@@ -249,10 +249,10 @@ body::before {
 
 .btn span {
     display: inline-block;
-    font-size: 0.9rem;
+    font-size: 2rem;
     font-weight: normal;
     margin-left: 0;
-    margin-top: 0;
+    margin-top: -1rem;
     vertical-align: middle;
 }
 /* Responsive Styles */
