--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -2,30 +2,29 @@
 body {
     position: relative; /* Required for positioning the pseudo-element */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #FFC925;
-    background-image: url('../img/login-photo2.png');
-    background-repeat: no-repeat;
-    background-position: calc(10% + 20px) center;
-    background-size: 1310px;
+    background-color: #ffc925;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     height: 100vh;
-    padding-right: 120px;
+    padding-right: 7.5rem;
     overflow: hidden;
+    flex-wrap: wrap;
 }
 body::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #5c490f;
-    opacity: 0.6; /* Adjust the opacity as needed */
-    z-index: 0;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-image: url('../img/login-photo2.png');
+    background-repeat: no-repeat;
+    background-position: calc(10% + 20px) 1%;
+    background-size: 1390px;
+    z-index: 1; /* Above .background-text2 */
+    margin-top: 10px; /* Optional: adjust to fit your design */
+    mix-blend-mode: multiply; /* Optional: blend with background */
+    
 }
 .background-text,
 .container {
